# compat

./: .coveragerc  .gitattributes  .gitignore  .travis.yml  CONTRIBUTING.rst  LICENSE  MANIFEST.in  README.md  README.rst  brink.conf  brink.sh  codecov.yml  coveragerc  pavement.py  paver.conf  paver.sh  pylintrc  pyproject.toml  pytest.ini  pythia.conf  pythia.sh  release-notes.rst  setup.cfg  setup.py
.github/: PULL_REQUEST_TEMPLATE  dependabot.yaml
.github/workflows/: bare.yml  ci.yaml  docker.yml  lint.yaml  main.yml  static_checks.yaml
chevah/compat/: __init__.py  administration.py  avatar.py  capabilities.py  compat_users.py  constants.py  constants_empirical.py  exceptions.py  helpers.py  interfaces.py  nt_capabilities.py  nt_filesystem.py  nt_service.py  nt_unicode_argv.py  nt_users.py  platform.py  posix_filesystem.py  test_filesystem.py  testing.py  unix_capabilities.py  unix_filesystem.py  unix_service.py  unix_users.py  winerrors.py
chevah/compat/testing/: __init__.py  assertion.py  conditionals.py  constants.py  filesystem.py  mockup.py  nose_memory_usage.py  nose_test_timer.py  testcase.py  threaded_reactor.py
chevah/compat/tests/: __init__.py
chevah/compat/tests/domain/: __init__.py  test_filesystem.py  test_system_users.py
chevah/compat/tests/elevated/: __init__.py  test_capabilities.py  test_filesystem.py  test_system_users.py
chevah/compat/tests/elevated/testing/: __init__.py  test_filesystem.py
chevah/compat/tests/manual/: __init__.py  batch_argv.bat  print_argv.py
chevah/compat/tests/mixin/: __init__.py  filesystem.py
chevah/compat/tests/normal/: __init__.py  helper_sys_argv.py  test_avatar.py  test_capabilities.py  test_filesystem.py  test_nt_service.py  test_nt_unicode_argv.py  test_system_users.py  test_testing.py  test_unix_service.py
chevah/compat/tests/normal/testing/: test_assertion.py  test_filesystem.py  test_mockup.py  test_nose_timer.py  test_testcase.py
chevah/empirical/: __init__.py  conditionals.py  constants.py  filesystem.py  mockup.py  nose_memory_usage.py  nose_run_reporter.py  testcase.py  threaded_reactor.py
chevah/empirical/tests/: __init__.py
chevah/empirical/tests/elevated/: __init__.py
chevah/empirical/tests/normal/: __init__.py  test_mockup.py  test_testcase.py
example/: unix-daemon.py
scripts/: nose_runner.py
src/chevah_compat/: __init__.py  administration.py  avatar.py  capabilities.py  compat_users.py  constants.py  exceptions.py  helpers.py  interfaces.py  nt_capabilities.py  nt_filesystem.py  nt_service.py  nt_users.py  posix_filesystem.py  unix_capabilities.py  unix_filesystem.py  unix_service.py  unix_users.py
src/chevah_compat/testing/: __init__.py  assertion.py  conditionals.py  constant.py  filesystem.py  mockup.py  nose_memory_usage.py  nose_randomly.py  nose_run_reporter.py  nose_test_timer.py  testcase.py  threaded_reactor.py
src/chevah_compat/tests/: __init__.py  conftest.py
src/chevah_compat/tests/elevated/: __init__.py  conftest.py  test_capabilities.py  test_filesystem.py  test_system_users.py
src/chevah_compat/tests/elevated/testing/: __init__.py  test_filesystem.py
src/chevah_compat/tests/manual/: __init__.py  batch_argv.bat  print_argv.py
src/chevah_compat/tests/mixin/: __init__.py  filesystem.py
src/chevah_compat/tests/normal/: __init__.py  helper_sys_argv.py  test_avatar.py  test_capabilities.py  test_filesystem.py  test_nt_service.py  test_nt_unicode_argv.py  test_system_users.py  test_testing.py  test_unix_service.py
src/chevah_compat/tests/normal/testing/: __init__.py  test_assertion.py  test_filesystem.py  test_mockup.py  test_nose_timer.py  test_testcase.py
