[metadata]
name = chevah-compat
version = 1.0.8
maintainer = Adi Roiban
maintainer_email = adi.roiban@proatria.com
license = BSD
platforms = any
description = Helpers for running Python code on multi OSes.
long_description = file: README.rst
url = http://www.chevah.com


[options]
python_requires = ~=3.8
install_requires =
   # The runtime dependencies should be relaxed as otherise it will
   # generate conflicts with the code using chevah-compat.
    zope.interface >= 5.4.0+chevah.2
    pywin32 >= 305 ; platform_system == "Windows"
    lockfile >= 0.9.1 ; platform_system == "Linux"
    python-pam >= 2.0.2 ; platform_system == "Linux"
    ; Used to detect Linux distributions.
    distro >= 1.6.0

packages = find:
package_dir = =src

[options.extras_require]
; These are the deps required to develop.
; Try to pin them as much as possible.
dev =
    scame == 0.6.3
    pyflakes >= 2.4.0
    pycodestyle == 2.8.0

    bunch

    Twisted == 20.3.0+chevah.5
    service_identity == 21.1.0

    nose == 1.3.7
    nose-randomly == 1.2.5

    coverage==6.3
    diff_cover==6.4.4
    codecov == 2.1.12

    ; Required for showing OpenSSL version in test_ci.
    pyOpenSSL

    ; Required for some unicode handling.
    unidecode

    wmi ~= 1.5.1; platform_system == "Windows"


[options.packages.find]
where = src


[options.entry_points]
nose.plugins.0.10 =
    memory-usage = chevah_compat.testing.nose_memory_usage:MemoryUsage
    test-time = chevah_compat.testing.nose_test_timer:TestTimer
    run-reporter = chevah_compat.testing.nose_run_reporter:RunReporter


[bdist_wheel]
universal = 1
