[metadata]
name = chevah-compat
version = 1.2.1
maintainer = Adi Roiban
maintainer_email = adi.roiban@proatria.com
license = BSD
platforms = any
description = Helpers for running Python code on many OSes.
long_description = file: README.rst
url = https://github.com/chevah/compat


[options]
python_requires = ~=3.8
install_requires =
   # The runtime dependencies should be relaxed as otherise it will
   # generate conflicts with the code using chevah-compat.
    zope.interface >= 5.4.0
    pywin32 >= 305 ; platform_system == "Windows"
    python-pam >= 2.0.2 ; platform_system == "Linux"
    ; Used to detect Linux distributions.
    distro >= 1.6.0

packages = find:
package_dir = =src

[options.extras_require]
; These are the deps required to develop.
; Try to pin them as much as possible.
dev =
    ruff ~= 0.7

    bunch

    Twisted==23.10.0+chevah.2
    incremental
    service-identity==24.1.0

    pynose == 1.5.3

    coverage ~= 7.5
    diff_cover == 6.4.4
    codecov == 2.1.12

    ; Required for showing OpenSSL version in test_ci.
    pyOpenSSL

    ; Required for some unicode handling.
    unidecode

    wmi ~= 1.5.1; platform_system == "Windows"


[options.packages.find]
where = src


[options.entry_points]
nose.plugins.0.10 =
    memory-usage = chevah_compat.testing.nose_memory_usage:MemoryUsage
    test-time = chevah_compat.testing.nose_test_timer:TestTimer
    run-reporter = chevah_compat.testing.nose_run_reporter:RunReporter
    randomly = chevah_compat.testing.nose_randomly:RandomlyPlugin


[bdist_wheel]
universal = 0
